--- a/templates/registro.html
+++ b/templates/registro.html
@@ -100,7 +100,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="../static/vendor/jquery/jquery.min.js"></script>
   <script>
       document.addEventListener('DOMContentLoaded', function() {
           const tipoRadios = document.querySelectorAll('input[name="tipo"]');
