--- a/templates/e_inicio.html
+++ b/templates/e_inicio.html
@@ -9,7 +9,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{url_for('especialista.inicio', id=get_esp.id_espe)}}">
                 <div class="sidebar-brand-icon">
-                    <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo" style="width: 40px; height: 40px;">
+                    <img src="{{ url_for('static', filename='../static/img/logo.png') }}" alt="Logo" style="width: 40px; height: 40px;">
                 </div>
                 <div class="sidebar-brand-text mx-3">Fundación Ayudate</div>
             </a>
@@ -61,7 +61,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{get_esp.pri_nombre}} {{get_esp.pri_apellido}}</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
+                                    src="{{ url_for('static', filename='../static/img/undraw_profile.svg') }}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -152,9 +152,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='../static/vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='../static/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='../static/js/sb-admin-2.min.js') }}"></script>
 
 </body>
 {% endblock %}
