--- a/templates/e_inicio.html
+++ b/templates/e_inicio.html
@@ -25,17 +25,17 @@
 
             <hr class="sidebar-divider">
 
-            <!-- <div class="sidebar-heading">
+            <div class="sidebar-heading">
                 Acciones
             </div>
 
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('especialista.receipeList', id=get_esp.id_espe) }}">
+                <a class="nav-link" href="{{ url_for('especialista.mostrar_asignacion', id=get_esp.id_espe) }}">
                     <i class="fas fa-fw fa-book-medical"></i>
                     <span>Asignar Paciente</span></a>
             </li>
 
-            <hr class="sidebar-divider d-none d-md-block"> -->
+            <hr class="sidebar-divider d-none d-md-block">
 
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
@@ -55,18 +55,19 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
-                        <!-- User Information -->
+
+                        <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{get_esp.pri_nombre}} {{get_esp.pri_apellido}}</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{{ url_for('static', filename='../static/img/undraw_profile.svg') }}">
+                                    src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="{{ url_for('especialista.perfil', id=get_esp.id_espe)}}">
+                                <a class="dropdown-item" href="{{ url_for('paciente.perfil', id=get_esp.id_espe)}}">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Perfil
                                 </a>
