--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,27 @@
                                           </button>
                                           <hr>
                                       </form>
+
+
+                                        <!-- Modal de Error -->
+                                        <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                {{ mensaje }}
+                                                </div>
+                                                <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
                                     
                                       <!-- <div class="text-center">
                                           <a class="small" href="{{ url_for('index.reset_request') }}">Olvidaste tu contraseña?</a>
@@ -160,8 +181,15 @@
             form.addEventListener('submit', validarFormulario);
         });
     </script>
-  
-  </body>
+    
+    {% if mensaje %}
+    <script>
+      $(document).ready(function(){
+          $('#errorModal').modal('show');
+      });
+    </script>
+    {% endif %}
 
+  </body>
 
 {% endblock %}
