🐛 FIXED: Add Food List Improved

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,11 @@
     <!-- Custom styles for this template-->
     <link href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}" rel="stylesheet">
 
+    <!-- Favicon PNG -->
+    <link rel="icon" 
+        type="image/png" 
+        href="{{ url_for('static', filename='../static/img/logo.png') }}">
+
 </head>
 
 <body>    
