--- a/templates/p_detalle_especialista.html
+++ b/templates/p_detalle_especialista.html
@@ -68,7 +68,7 @@
             </div>
             {% else %}
             <div class="alert alert-info" role="alert">
-                No hay comidas para mostrar en esta categoría
+                No hay comidas para mostrar
             </div>
             {% endif %}
         </div>
