--- a/templates/p_ver_especialistas.html
+++ b/templates/p_ver_especialistas.html
@@ -185,7 +185,7 @@
                 <div class="modal-body">Selecciona "Cerrar sesión" abajo si estas listo para cerrar tu sesion actual.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <a class="btn btn-primary" href="{{ url_for('index.logout', get_pac.id_paciente) }}">Cerrar sesión</a>
+                    <a class="btn btn-primary" href="{{ url_for('index.logout', id=get_pac.id_paciente) }}">Cerrar sesión</a>
                 </div>
             </div>
         </div>
