🐛 FIXED: Food Details, Edit and Delete Fixed

--- a/templates/p_perfil.html
+++ b/templates/p_perfil.html
@@ -18,7 +18,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="{{url_for('paciente.inicio', id=paciente.id_paciente)}}">
                   <i class="fas fa-fw fa-tachometer-alt"></i>
-                  <span>Bienvenido de Nuevo!</span></a>
+                  <span>Vista Principal</span></a>
           </li>
 
           <!-- Divider -->
