--- a/templates/p_inicio.html
+++ b/templates/p_inicio.html
@@ -144,7 +144,6 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <!-- Content will be loaded here -->
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -261,12 +260,10 @@
     <!-- Custom scripts for all pages-->
     <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
 
-    <!-- Page level plugins -->
-    <script src="{{ url_for('static', filename='vendor/chart.js/Chart.min.js') }}"></script>
-
     <!-- Page level custom scripts -->
     <script src="{{ url_for('static', filename='js/demo/chart-area-demo.js') }}"></script>
     <script src="{{ url_for('static', filename='js/demo/chart-pie-demo.js') }}"></script>
+    </script>
     <script>
         $('#foodDetailModal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
@@ -290,15 +287,14 @@
             var button = $(event.relatedTarget);
             var date   = button.data('date');
             var modal  = $(this);
-
-            // Mientras carga, dejamos el spinner
+ 
             modal.find('.modal-body').html('<div class="text-center py-5"><i class="fas fa-spinner fa-spin"></i> Cargando...</div>');
 
             $.ajax({
             url: "{{ url_for('paciente.updateFood', id=get_pac.id_paciente, date='__DATE__') }}"
                     .replace('__DATE__', encodeURIComponent(date)),
             type: "GET",
-            data: { modal: 1 },  // indicamos que queremos sólo el fragmento
+            data: { modal: 1 },
             success: function(html) {
                 modal.find('.modal-body').html(html);
             },
