--- a/templates/e_detalle_comida.html
+++ b/templates/e_detalle_comida.html
@@ -23,18 +23,24 @@
             </li>
 
             <hr class="sidebar-divider">
-<!-- 
-            <div class="sidebar-heading">
+
+                        <div class="sidebar-heading">
                 Acciones
             </div>
 
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('especialista.receipeList', id=get_esp.id_espe) }}">
+                <a class="nav-link" href="{{ url_for('especialista.mostrar_asignacion', id=get_esp.id_espe) }}">
                     <i class="fas fa-fw fa-book-medical"></i>
-                    <span>Agregar Paciente</span></a>
+                    <span>Asignar Paciente</span></a>
             </li>
 
-            <hr class="sidebar-divider d-none d-md-block"> -->
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('especialista.anadir_alimento', id=get_esp.id_espe) }}">
+                    <i class="fas fa-fw fa-drumstick-bite"></i>
+                    <span>Añadir Alimento</span></a>
+            </li>
+            
+            <hr class="sidebar-divider d-none d-md-block">
 
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
